--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,7 @@
   --border-bottom-color: #ececec;
   --border-cards-color: #eeeeee;
   --svg-fill: #afb1b8;
+  --occupation-background: rgba(47, 48, 58, 0.8);
 }
 body {
   font-family: roboto, sans-serif;
@@ -35,8 +36,11 @@ ul {
   margin: 0;
   padding: 0;
 }
-.link {
+.link,
+.btn {
   text-decoration: none;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .link:hover,
 .link:focus,
@@ -82,6 +86,23 @@ ul {
   display: flex;
   align-items: center;
   justify-content: flex-start;
+}
+
+.header-list-item {
+  position: relative;
+}
+
+.current::after {
+  content: '';
+  position: absolute;
+  left: 100%;
+  bottom: -33px;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  transform: translateX(-100%);
+  background-color: var(--accent-color);
+  display: block;
 }
 
 .header-list,
@@ -281,8 +302,42 @@ ul {
   margin-bottom: 50px;
 }
 
+.occupation-item {
+  padding: 0;
+  margin: 0;
+  border: 0;
+}
+.occupation-item > .container {
+  position: relative;
+  width: 100%;
+  height: 294px;
+  padding: 0;
+}
+
 .occupation-item:not(:first-child) {
   margin-left: 30px;
+}
+
+.occupation-description {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  position: absolute;
+  bottom: 0;
+  width: 370px;
+  height: 70px;
+
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 16px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+
+  color: var(--hero-text-color);
+  background-color: var(--occupation-background);
 }
 
 .occupation-list {
