--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,7 @@
   --occupation-background: rgba(47, 48, 58, 0.8);
   --card-overlay: rgba(33, 150, 243, 0.9);
   --modal-backdrop: rgba(0, 0, 0, 0.2);
+  --modal-btn-border: rgba(0, 0, 0, 0.1);
 }
 body {
   font-family: roboto, sans-serif;
@@ -767,8 +768,10 @@ ul {
   border-radius: 50%;
   width: 30px;
   height: 30px;
-  top: 0;
-  right: 0;
+  top: 8px;
+  right: 8px;
+  background-color: var(--header-background-color);
+  border: 1px solid var(--modal-btn-border);
 }
 
 .close-ico {
