--- a/css/styles.css
+++ b/css/styles.css
@@ -750,6 +750,13 @@ ul {
   width: 100vw;
   height: 100vh;
   background-color: var(--modal-backdrop);
+  transform: opacity 300ms ease-in-out, visibility 300ms ease-in-out;
+}
+
+.backdrop .is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
 }
 
 .modal {
