--- a/css/styles.css
+++ b/css/styles.css
@@ -39,12 +39,15 @@ ul {
   margin: 0;
   padding: 0;
 }
+
 .link,
 .btn {
   text-decoration: none;
+  transition-property: background-color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .link:hover,
 .link:focus,
 .street:hover,
@@ -750,10 +753,10 @@ ul {
   width: 100vw;
   height: 100vh;
   background-color: var(--modal-backdrop);
-  transform: opacity 300ms ease-in-out, visibility 300ms ease-in-out;
+  /* transform: opacity 300ms ease-in-out, visibility 300ms ease-in-out; */
 }
 
-.backdrop .is-hidden {
+.backdrop.is-hidden {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
@@ -770,15 +773,19 @@ ul {
   border-radius: 4px;
 }
 
-.modal-btn {
+.close-btn {
   position: absolute;
   border-radius: 50%;
   width: 30px;
   height: 30px;
   top: 8px;
   right: 8px;
-  background-color: var(--header-background-color);
+  background-color: transparent;
   border: 1px solid var(--modal-btn-border);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 }
 
 .close-ico {
