--- a/css/styles.css
+++ b/css/styles.css
@@ -43,7 +43,7 @@ ul {
 .link,
 .btn {
   text-decoration: none;
-  transition-property: background-color;
+  transition-property: background-color, color, fill, text-color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -102,7 +102,7 @@ ul {
   content: '';
   position: absolute;
   left: 100%;
-  bottom: -33px;
+  bottom: -33.5px;
   width: 100%;
   height: 4px;
   border-radius: 2px;
@@ -753,7 +753,7 @@ ul {
   width: 100vw;
   height: 100vh;
   background-color: var(--modal-backdrop);
-  /* transform: opacity 300ms ease-in-out, visibility 300ms ease-in-out; */
+  transition: opacity 300ms ease-in-out, visibility 300ms ease-in-out;
 }
 
 .backdrop.is-hidden {
@@ -785,7 +785,6 @@ ul {
   display: flex;
   justify-content: center;
   align-items: center;
-}
 }
 
 .close-ico {
