--- a/css/styles.css
+++ b/css/styles.css
@@ -674,6 +674,7 @@ ul {
   flex-basis: calc((100% / 3) - 30px);
   margin-left: 30px;
   margin-top: 30px;
+  transition: transform 300ms linear;
 }
 
 .works-list-item:hover,
@@ -771,6 +772,8 @@ ul {
   left: 50%;
   transform: translate(-50%, -50%);
   border-radius: 4px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
 .close-btn {
